force-app/main/default/objects/Exception__c/Exception__c.object-meta.xml
<CustomObject>
    <label>Exception</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Exception No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>