force-app/main/default/objects/Exception__c/fields/Excel_Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Excel_Row_Number__c</fullName>
    <label>Excel Row Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>