force-app/main/default/objects/Exception__c/fields/Exception_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Exception_Field_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>