force-app/main/default/objects/Exception__c/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>