force-app/main/default/objects/Exception__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent Upload</fullName>
            </value>
            <value>
                <fullName>Departure Upload</fullName>
            </value>
            <value>
                <fullName>Report Upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>